--- a/pom.xml
+++ b/pom.xml
@@ -22,9 +22,9 @@
 		<spring.version>5.1.2.RELEASE</spring.version>
 		<junit.version>4.11</junit.version>
 		<log4j.version>1.2.17</log4j.version>
-		<sonar.host.url>http://54.86.162.223:9000/</sonar.host.url>
-		<sonar.login>linux</sonar.login>  
-		<sonar.login>cdcf763140bd1c6d79d733453fe14c9505865a60</sonar.login>
+		<sonar.host.url>http://44.208.161.47:9000/</sonar.host.url>
+		<sonar.login>admin</sonar.login>  
+		<sonar.login>f113ef56a4ee75e3304765f08a38fec0219d2015</sonar.login>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
 	</properties>
